--- a/style/style1.scss
+++ b/style/style1.scss
@@ -21,6 +21,7 @@ $btncolor: #2952e3;
 @import "components/_admin";
 @import "components/_adminHome";
 @import "components/_adminProducts";
+@import "components/_adminOrders";
 
 // eror msg styling
 .top-msg {
@@ -35,5 +36,6 @@ $btncolor: #2952e3;
   margin-left: 40vw;
   text-align: center;
 }
+
 
 // *# sourceMappingURL=style1.css.map */
