--- a/style/style1.css
+++ b/style/style1.css
@@ -1477,7 +1477,7 @@ body.Aprofile * {
 }
 .bodyA .mainA {
   margin-top: 40px;
-  margin-left: 25vw;
+  margin-left: 23vw;
   height: 100vh;
 }
 .bodyA .mainA .productsEnlisted {
@@ -1500,12 +1500,15 @@ body.Aprofile * {
   font-weight: 600;
 }
 
+.mainTableA {
+  padding: 50px 0;
+}
 .mainTableA table {
   margin-bottom: 30px;
   margin-top: 5px;
   border-collapse: collapse;
   border: rgb(135, 229, 255) 2px solid;
-  width: 70vw;
+  width: 75vw;
 }
 .mainTableA table thead {
   border: rgb(135, 229, 255) 2px solid;
@@ -1513,10 +1516,56 @@ body.Aprofile * {
 .mainTableA table tr td {
   height: 30px !important;
   text-align: center;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
 .mainTableA table tbody tr td {
   text-align: center;
-  height: 40px !important;
+  height: 80px !important;
+}
+
+.action {
+  padding: 50px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.action .btno-edit {
+  background-color: rgb(0, 141, 0);
+  padding: 4px 6px;
+  margin: 2px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: 500;
+  box-shadow: 1px 1px 2px black;
+}
+.action .btno-edit:hover {
+  background-color: rgb(0, 167, 0);
+  box-shadow: 2px 2px 5px black;
+}
+.action .btno-edit:active {
+  box-shadow: 0 0 0 black;
+}
+.action .btno-delete {
+  background-color: rgb(255, 0, 0);
+  padding: 4px 5px;
+  margin: 2px;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: 500;
+  box-shadow: 1px 1px 2px black;
+}
+.action .btno-delete:hover {
+  background-color: rgb(201, 0, 0);
+  box-shadow: 2px 2px 5px black;
+}
+.action .btno-delete:active {
+  box-shadow: 0 0 0 black;
 }
 
 .top-msg {
